gcc/testsuite/rust/rustc/ui/never_type/issue-96335.rs
fn main() {
    0.....{loop{}1};
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
}

